--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,14 +33,20 @@ services:
     volumes:
       - redis_data:/var/lib/redis/data
   db:
-    image: postgres
+    build:
+      context: .
+      dockerfile: "Dockerfile_DB"
+    # image: postgres
     ports:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     environment:
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_PASSWORD: root
+      POSTGRES_USER: root
+    env_file:
+      - ./.env
   api:
     tty: true
     stdin_open: true # containerのinputをオープンに(binding.pry用)
@@ -65,3 +71,4 @@ volumes:
   gem_data:
   esdata:
   redis_data:
+
