--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,11 @@ services:
       - .:/rails_app
       - gem_data:/usr/local/bundle
     command: rails server -b 0.0.0.0
-    # command: bundle exec rdebug-ide --host 0.0.0.0 --port 1234 --dispatcher-port 26162 -- bin/rails s -p 3000 -b 0.0.0.0
+    environment:
+      GEM_HOME: /usr/local/bundle/gems
+      BUNDLE_PATH: /usr/local/bundle
+      BUNDLE_BIN: /usr/local/bundle/bin
+      PATH: "/usr/local/bundle/bin:${PATH}"
 volumes:
   pgdata:
   gem_data:
